[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pst-converter"
version = "0.1.0"
description = "CLI scaffold for PST conversion orchestration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PST Converter Team" }]
dependencies = []

[project.scripts]
pst-converter = "pst_converter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
